# Teach-Repeat-Replan

./: README.md  config_gcc.sh  install_tools.sh  intall_tools.sh  key2joy.py  trr_simulation.sh
controller/djiros/: CMakeLists.txt  README.md  package.xml
controller/djiros/OSDK/Onboard-SDK-3.3/: .clang-format  .gitignore  CMakeLists.txt
controller/djiros/codeblockfiles/djirosBluefox/: djirosBluefox.cbp  djirosBluefox.layout
controller/djiros/docs/: 99-ftdi.rules  flowchart.dia  flowchart.eps  step_by_step_tutorial.md
controller/djiros/include/djiros/: DjiRos.h  HardwareSync.h
controller/djiros/launch/: djifox.launch  djiros.launch
controller/djiros/msg/: Gimbal.msg  MissionWaypointAction.msg  MissionWaypointTask.msg  MobileData.msg
controller/djiros/script/: thrust_test.py
controller/djiros/src/: how-to-port-from-official.md
controller/djiros/src/bluefox2/: camera.cpp  camera.h
controller/djiros/src/djiros/: DjiRos.cpp  DjiRosAuthority.cpp  DjiRosServices.cpp  DjiRosSubscriber.cpp  DjiRosUtils.cpp  djifox_node.cpp  djiros_node.cpp
controller/djiros/src/modules/: dji_sdk_node.cpp  dji_sdk_node_control.cpp  dji_sdk_node_mission_services.cpp  dji_sdk_node_mobile_comm.cpp  dji_sdk_node_publisher.cpp  dji_sdk_node_services.cpp  dji_sdk_node_subscriber.cpp
controller/djiros/srv/: DroneArmControl.srv  DroneTaskControl.srv  MFIOConfig.srv  MissionStatus.srv  MissionWpAction.srv  MissionWpGetInfo.srv  MissionWpGetSpeed.srv  MissionWpUpload.srv  SetHardSync.srv
global_ mapping/map_server/: package.xml
global_mapping/surfel_fusion/: CMakeLists.txt
global_mapping/surfel_fusion/src/: elements.h  ros_node.cpp
global_planner/: CMakeLists.txt  package.xml
global_planner/config/: rviz_config.rviz
global_planner/include/global_planner/utils/: poly_utils.h
global_planner/launch/: global_planner.launch  map_generator.launch
global_planner/src/: spatial_optimizer.cpp  teach_repeat_planner.cpp
global_planner/src/utils/: random_complex_generator.cpp
ground_station/global_mapping/map_server/: CMakeLists.txt
ground_station/global_mapping/map_server/src/: map_server.cpp
ground_station/global_mapping/surfel_fusion/: package.xml
ground_station/global_mapping/surfel_fusion/launch/: global_map_fusion.launch  mapping.rviz
ground_station/global_mapping/surfel_fusion/src/: surfel_map.h  timer.h
ground_station/global_planner/: CMakeLists.txt
ground_station/global_planner/config/: rviz_config.rviz
ground_station/global_planner/include/global_planner/: spatial_optimizer.h  temporal_optimizer.h
ground_station/global_planner/launch/: global_planner.launch  global_planner_exp.launch
ground_station/global_planner/src/: spatial_optimizer.cpp  teach_repeat_planner.cpp  temporal_optimizer.cpp
ground_station/global_planner/src/utils/: a_star.cpp  bezier_base.cpp
ground_station/joy_ctrl/: CMakeLists.txt  package.xml
ground_station/joy_ctrl/launch/: joy_ctrl.launch
ground_station/joy_ctrl/src/: joy_ctrl.cpp
ground_station/polyhedron_generator/: CMakeLists.txt  package.xml
ground_station/polyhedron_generator/include/polyhedron_generator/: cluster_engine.cuh  cluster_server.cuh  cluster_server_cpu.h
ground_station/polyhedron_generator/src/: cluster_engine.cu
installation/OOQP/: .gitignore  GNUmakefile.in  INSTALLED-MANIFEST  MANIFEST  NEWS  PetscMakefile.in  VERSION  configure  configure.ac
installation/OOQP/doc/: .gitignore  index.html
installation/OOQP/doc-src/: Doxyfile  GNUmakefile
installation/OOQP/doc-src/distribution-docs/: COPYRIGHT.pod  (+4 more)
installation/OOQP/examples/: README
local_replanner/local_replanner/: CMakeLists.txt  package.xml
local_replanner/local_replanner/launch/: local_replanner.launch
local_replanner/local_replanner/src/: bezier_base.cpp  grad_band_optimizer.cpp  replanner_node.cpp
onboard_computer/controller/n3ctrl/: CMakeLists.txt  README.md  package.xml
onboard_computer/local_replanner/local_perception/: CMakeLists.txt
onboard_computer/local_replanner/local_replanner/: CMakeLists.txt
polyhedron_generator/: CMakeLists.txt
polyhedron_generator/src/: cluster_server.cu  cluster_server_cpu.cpp
simulation/cascade_control/: CMakeLists.txt  nodelet_plugins.xml  package.xml
simulation/cascade_control/include/: attitude_control.hpp  controller.hpp  estimator.hpp  frequencyalign.hpp  intergrationestimator.hpp  mixer.hpp  pid.hpp  position.hpp  pretreatmentor.hpp  thrust.hpp  translationfeedforwardmixer.hpp  velocity.hpp
simulation/cascade_control/launch/: simulator.launch
simulation/cascade_control/src/: accelerationcontrol.cpp  attitude_control.cpp  cascadecontrol.cpp  cascadecontrollernode.cpp  control_states.cpp  estimator.cpp  frequencyalign.cpp  intergrationestimator.cpp  pid.cpp  position.cpp  pretreatmentor.cpp  thrust.cpp  translation_control.cpp  translationfeedforwardmixer.cpp  velocity.cpp
simulation/cascade_control/test/: cascade_control_test.cpp  gsl_test.cpp  so3_test.cpp  translation_control_test.cpp
simulation/mission_template/: CMakeLists.txt  nodelet_plugins.xml  package.xml
simulation/mission_template/include/: mission_template.hpp
simulation/mission_template/src/: mission_template.cpp
simulation/router/: CMakeLists.txt
simulation/router/include/: router.hpp
simulation/router/launch/: test.launch
simulation/router/src/: router.cpp
simulation/state_machine/: CMakeLists.txt  package.xml
simulation/state_machine/include/: dataio.hpp  eventspinner.hpp  external_mission.hpp  link.hpp  monitor.hpp  mpaux.hpp  rc.hpp  self.hpp  stateitem.hpp  statemachine.hpp  statemap.hpp
simulation/state_machine/launch/: single.launch
simulation/state_machine/node/: statemachine_node.cpp
simulation/state_machine/src/: dataio.cpp  external_mission.cpp  flightactions.cpp  mission.cpp  monitor.cpp  rc.cpp  safefifo.cpp  self.cpp  stateitem.cpp
simulation/state_machine/test/: dataio_test.cpp  eventspinner_test.cpp  mission_test.cpp  mpaux_test.cpp  statemachine_test.cpp
utils/odom_visualization/: CMakeLists.txt  package.xml
utils/odom_visualization/src/: odom_visualization.cpp
(+684 files in other folders)
