<?xml version="1.0"?>
<package>
  <name>polyhedron_generator</name>
  <version>0.0.1</version>
  <description> parallel computing to get convex polytopes </description>
  <maintainer email="ustfeigao@gmail.com">fgaoaa</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>decomp_ros_msgs</build_depend>
  <build_depend>quadrotor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>decomp_ros_msgs</run_depend>
  <run_depend>quadrotor_msgs</run_depend>

  <export>
  </export>
</package>
