<package>
  <version>0.0.0</version>
  <name>odom_visualization</name>
  <description>

     odom_visualization

  </description>
  <maintainer email="eeshaojie@todo.todo">Shaojie Shen</maintainer>
  <maintainer email="william.wu@todo.todo">Shaojie Shen</maintainer>
<license>GPLV3</license>
  <url>http://ros.org/wiki/odom_visualization</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pose_utils</build_depend>
  <build_depend>cmake_utils</build_depend>
  <build_depend>joy</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pose_utils</run_depend>
  <run_depend>cmake_utils</run_depend>
  <run_depend>joy</run_depend>

</package>


